mejora menu sub menu

--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,6 @@ body {
 /* ---------------------------------------------------
     SIDEBAR
 ----------------------------------------------------- */
-
 .wrapper {
     display: flex;   
 }
@@ -19,6 +18,7 @@ body {
     color: rgba(255,255,255,1);
     transition: all 0.3s;
     height: 100vh;
+    /*background-image: url(../imagen/fondo_comida.jpg);*/
 }
 
 #sidebar .sidebar-header {
@@ -30,7 +30,7 @@ body {
 #sidebar .sidebar-header strong {
     display: none;    
 }
-
+/* *** */
 #sidebar ul.components {
     padding: 20px 0;
     border-bottom: 1px solid rgba(71,116,139,1);
@@ -43,135 +43,16 @@ body {
 }
 
 #sidebar ul li a:hover {
-    color: rgba(255,255,0,1);
+    color: rgba(230,230,230,0.9);
     background-color: rgba(0,188,212,0.9);
 }
 
 #sidebar ul li a i {
-    margin-right: 10px;
-}
-
-#sidebar ul li.active>a,
-a[aria-expanded="true"] {
-    color: #fff;
-    background: #6d7fcc;
-}
-
-#sidebar.active {
-    min-width: 80px;
-    max-width: 80px;
-    text-align: center;
-}
-
-#sidebar.active .sidebar-header h3,
-#sidebar.active .CTAs {
-    display: none;
-}
-
-#sidebar.active .sidebar-header strong {
-    display: block;
-    font-size: 1.8em;
+    margin-right: 3px;
 }
 
 #sidebar ul li a {
     text-align: left;
-}
-
-#sidebar.active ul li a {
-    padding: 20px 10px;
-    text-align: center;
-    font-size: 0.85em;
-}
-
-#sidebar.active ul li a i {
-    margin-right: 0;
-    display: block;
-    font-size: 1.8em;
-    margin-bottom: 5px;
-}
-
-#sidebar.active ul ul a {
-    padding: 10px !important;
-}
-
-#sidebar.active .dropdown-toggle::after {
-    top: auto;
-    bottom: 10px;
-    right: 50%;
-    -webkit-transform: translateX(50%);
-    -ms-transform: translateX(50%);
-    transform: translateX(50%);
-}
-
-
-
-
-p {
-    font-family: 'Poppins', sans-serif;
-    font-size: 1.1em;
-    font-weight: 300;
-    line-height: 1.7em;
-    color: #999;
-}
-
-a,
-a:hover,
-a:focus {
-    color: inherit;
-    text-decoration: none;
-    transition: all 0.3s;
-}
-
-
-.navbar {
-    padding: 15px 10px;
-    background-color: rgba(0,94,184,0.9);  /* (255,255,255,1) */
-    border: none;
-    border-radius: 0;
-    margin-bottom: 40px;
-    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
-}
-
-.navbar .container-fluid .nav-item a:hover,
-.navbar .container-fluid .nav-item a:focus
-{ 
-    background-color: rgba(0,188,212,0.3); 
-}
-
-.navbar .container-fluid .nav-item .dropdown-menu a:hover,
-.navbar .container-fluid .nav-item .dropdown-menu a:focus
-{ 
-    background-color: rgba(0,188,212,0.1); 
-}
-
-.navbar-btn {
-    box-shadow: none;
-    outline: none !important;
-    border: none;
-}
-
-.line {
-    width: 100%;
-    height: 1px;
-    border-bottom: 1px dashed #ddd;
-    margin: 40px 0;
-}
-
-i,
-span {
-    display: inline-block;
-}
-
-a[data-toggle="collapse"] {
-    position: relative;
-}
-
-.dropdown-toggle::after {
-    display: block;
-    position: absolute;
-    top: 50%;
-    right: 20px;
-    transform: translateY(-50%);
 }
 
 ul ul a {
@@ -192,6 +73,70 @@ ul.CTAs a {
     margin-bottom: 5px;
 }
 
+#sidebar ul li.active>a,
+a[aria-expanded="true"] {
+    color: rgba(255,255,255,1);
+    background: rgba(109,127,204,1);
+}
+
+#sidebar.active {
+    min-width: 80px;
+    max-width: 80px;
+    text-align: center;
+}
+
+#sidebar.active .sidebar-header h3,
+#sidebar.active .CTAs {
+    display: none;
+}
+
+#sidebar.active .sidebar-header strong {
+    display: block;
+    font-size: 1.8em;
+}
+
+#sidebar.active ul li a {
+    padding: 20px 10px;
+    text-align: center;
+    font-size: 0.85em;
+}
+
+#sidebar.active ul li a i {    
+    display: block;
+    font-size: 1.8em;
+    margin-right: 0;
+    margin-bottom: 5px;
+}
+
+#sidebar.active ul ul a {
+    padding: 10px !important;
+}
+
+#sidebar.active .dropdown-toggle::after {
+    top: auto;
+    bottom: 10px;
+    right: 50%;
+    -webkit-transform: translateX(50%);
+    -ms-transform: translateX(50%);
+    transform: translateX(50%);
+}
+
+p {
+    font-family: sans-serif;
+    font-size: 1.1em;
+    font-weight: 300;
+    line-height: 1.7em;
+    color: #999;
+}
+
+a,
+a:hover,
+a:focus {
+    color: inherit;
+    text-decoration: none;
+    transition: all 0.3s;
+}
+
 a.download {
     background: #fff;
     color: #7386D5;
@@ -204,8 +149,34 @@ a.article:hover {
 }
 
 /* ---------------------------------------------------
-    CONTENT STYLE
+    NAVBAR STYLE
 ----------------------------------------------------- */
+.navbar {
+    padding: 15px 10px;
+    background-color: rgba(0,94,184,0.9);
+    border: none;
+    border-radius: 0;
+    margin-bottom: 30px;
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
+}
+
+.navbar.navbar-expand-lg
+{
+	padding-top: 0px;
+	padding-bottom: 0px;	
+}
+
+.navbar .container-fluid .nav-item a:hover,
+.navbar .container-fluid .nav-item a:focus
+{ 
+    background-color: rgba(0,188,212,0.3); 
+}
+
+.navbar .container-fluid .nav-item .dropdown-menu a:hover,
+.navbar .container-fluid .nav-item .dropdown-menu a:focus
+{ 
+    background-color: rgba(0,188,212,0.1); 
+}
 
 #content {
     width: 100%;
@@ -225,14 +196,41 @@ a.article:hover {
     color:rgba(255,255,255,1);  	
 }
 
-.navbar, navbar-expand-lg
-{
-	padding-top: 0px;
-	padding-bottom: 0px;	
+/*.navbar-btn {
+    box-shadow: none;
+    outline: none !important;
+    border: none;
 }
 
+.line {
+    width: 100%;
+    height: 1px;
+    border-bottom: 1px dashed #ddd;
+    margin: 40px 0;
+}*/
+
+i,
+span {
+    display: inline-block;
+}
+
+a[data-toggle="collapse"] {
+    position: relative;
+}
+
+.dropdown-toggle::after {
+    display: block;
+    position: absolute;
+    top: 50%;
+    right: 20px;
+    transform: translateY(-50%);
+}
+
+/* ---------------------------------------------------
+    CARGA IMA
+----------------------------------------------------- */
 input#idFileProducto, input#idFileProducto_edit{
-  color: transparent;
+	color: transparent;
 }
 
 #imagenCargar, #edit_imagen_bd{
@@ -244,7 +242,6 @@ input#idFileProducto, input#idFileProducto_edit{
 /* ---------------------------------------------------
     MEDIAQUERIES
 ----------------------------------------------------- */
-
 @media (max-width: 768px) {
     #sidebar {
         min-width: 80px;
