cambios css, login

--- a/css/main.css
+++ b/css/main.css
@@ -83,6 +83,7 @@ a[aria-expanded="true"] {
     min-width: 80px;
     max-width: 80px;
     text-align: center;
+    overflow: hidden;
 }
 
 #sidebar.active .sidebar-header h3,
