--- a/css/custom.css
+++ b/css/custom.css
@@ -70,8 +70,13 @@ table.table tr th, table.table tr td {
 	vertical-align: middle;
 }
 
+table.table tr th p {
+	font-weight:bold;
+	color:rgba(0,0,0,1);
+}
+
 table.table tr th:first-child {
-	width: 60px;
+	width: 140px;
 }
 
 table.table tr th:last-child {
